--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "flex-layout": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
