--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1",
+    "flex-layout": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
