--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flex-layout": "^1.0.1",
@@ -32,6 +33,8 @@
     "mongoose": "^5.7.5",
     "morgan": "^1.9.1",
     "ngx-cookie-service": "^2.2.0",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
