--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": ["../node_modules/chart.js/dist/Chart.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
