--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "flex-layout": "^1.0.1",
