--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "node_modules/primeicons/primeicons.css"
             ],
 
-            "scripts": ["../team-taco-bobs-computer-repair/node_modules/chart.js/dist/Chart.js"]
+            "scripts": [
+              "../team-taco-bobs-computer-repair/node_modules/chart.js/dist/Chart.js"
+            ]
           },
           "configurations": {
             "production": {
